--- a/paper-input-flagged.html
+++ b/paper-input-flagged.html
@@ -1,7 +1,10 @@
 <link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../materializecss-styles/materializecss-styles.html">
-<link rel="import" href="../hax-body-behaviors/hax-body-behaviors.html">
-<link rel="import" href="../schema-behaviors/schema-behaviors.html">
+<link rel="import" href="../paper-input/paper-input.html">
+<link rel="import" href="../paper-tooltip/paper-tooltip.html">
+<link rel="import" href="../paper-input/paper-input-behavior.html">
+<link rel="import" href="../iron-icons/iron-icons.html">
+<link rel="import" href="../iron-icon/iron-icon.html">
+
 <!--
 `paper-input-flagged`
 A LRN element
@@ -9,9 +12,7 @@ A LRN element
 @demo demo/index.html
 
 @microcopy - the mental model for this element
- -
- -
-
+ - flagged - a piece of content with a status message indicating there's an issue with the input by the user. This isn't formal validation but more of feedback or suggestions about what they are entering. The default is feedback for alt metadata, useful for images.
 -->
 
 <dom-module id="paper-input-flagged">
@@ -20,73 +21,166 @@ A LRN element
       :host {
         display: block;
       }
+      iron-icon {
+        transition: .6s all ease-in;
+        width: 24px;
+        height: 24px;
+        margin-right: 4px;
+      }
+      paper-tooltip {
+        font-size: 11px;
+        --paper-tooltip-delay-in: 100;
+      }
+      #icon {
+        color: var(--paper-grey-400);
+        background-color: transparent;
+      }
+      :host[status=info] #icon {
+        color: var(--paper-green-400);
+      }
+      :host[status=notice] #icon {
+        color: var(--paper-grey-400);
+      }
+      :host[status=warning] #icon {
+        color: var(--paper-yellow-700);
+      }
+      :host[status=error] #icon {
+        color: var(--paper-red-900);
+      }
     </style>
-    <h2>[[title]]</h2>
+    <paper-input label="[[label]]" value="{{value}}" char-counter="[[charCounter]]" disabled="[[disabled]]" minlength="[[minlength]]" maxlength="[[minlength]]">
+      <iron-icon id="icon" icon="[[icon]]" slot="prefix"></iron-icon>
+    </paper-input>
+    <paper-tooltip
+      for="icon"
+      position="top"
+      offset="20"
+      fit-to-visible-bounds>
+        [[__activeMessage]]
+      </paper-tooltip>
   </template>
 
   <script>
     Polymer({
 
       is: 'paper-input-flagged',
-      behaviors: [HAXBehaviors.PropertiesBehaviors, MaterializeCSSBehaviors.ColorBehaviors, SchemaBehaviors.Schema],
+      behaviors: [Polymer.PaperInputBehavior],
       properties: {
         /**
-         * Title
+         * Icon based on status
          */
-        title: {
+        icon: {
           type: String,
+          computed: '_iconFromStatus(status)',
+        },
+        /**
+         * Status based on test for flagged words
+         */
+        status: {
+          type: String,
+          reflectToAttribute: true,
+          computed: 'testStatus(flaggedInput, value)',
+        },
+        /**
+         * value
+         */
+        value: {
+          type: String,
+          notify: true,
+        },
+        /**
+         * Input to trap and offer feedback about.
+         */
+        flaggedInput: {
+          type: Array,
+          value: [
+            {
+              match: null,
+              message: 'Alt data is required for everything except decoration images.',
+              status: 'notice',
+            },
+            {
+              match: 'image',
+              message: 'Screenreaders will say the word image, don\'t put it in the descriptive text',
+              status: 'error',
+            },
+            {
+              match: 'photo',
+              message: 'Screenreaders will say the word image, don\'t put photo in the descriptive text',
+              status: 'error',
+            },
+            {
+              match: 'picture',
+              message: 'Screenreaders will say the word image, don\'t put picture in the descriptive text',
+              status: 'error',
+            },
+            {
+              match: 3,
+              message: 'Description not effective enough. This should be at least a sentance about what the image is.',
+              status: 'error',
+            },
+            {
+              match: 10,
+              message: 'Make sure your alt text is descriptive enough for those that can\'t see the media.',
+              status: 'warning',
+            },
+          ]
+        },
+        /**
+         * Passed tests / success data.
+         */
+        inputSuccess: {
+          type: Object,
+          value: {
+            message: 'You passed our simple accessibility checks.',
+            status: 'info',
+          },
         },
       },
       /**
-       * Attached to the DOM, now fire.
+       * testStatus based on current input
        */
-      attached: function() {
-        // Establish hax property binding
-        let props = {
-          'canScale': true,
-          'canPosition': true,
-          'canEditSource': false,
-          'gizmo': {
-            'title': 'Sample gizmo',
-            'description': 'The user will be able to see this for selection in a UI.',
-            'icon': 'av:play-circle-filled',
-            'color': 'grey',
-            'groups': ['Video', 'Media'],
-            'handles': [
-              {
-                'type': 'video',
-                'url': 'source'
-              }
-            ],
-            'meta': {
-              'author': 'Your organization on github'
-            }
-          },
-          'settings': {
-            'quick': [
-              {
-                'property': 'title',
-                'title': 'Title',
-                'description': 'The title of the element',
-                'inputMethod': 'textfield',
-                'icon': 'editor:title',
-              },
-            ],
-            'configure': [
-              {
-                'property': 'title',
-                'title': 'Title',
-                'description': 'The title of the element',
-                'inputMethod': 'textfield',
-                'icon': 'editor:title',
-              },
-            ],
-            'advanced': [
-            ]
+      testStatus: function(test, value) {
+        for (var i in test) {
+          // special case for null if testing empty
+          if (test[i].match === null && (value === '' || value === null)) {
+            this.__activeMessage = test[i].message;
+            return test[i].status;
           }
-        };
-        this.setHaxProperties(props);
+          else if (!isNaN(test[i].match) && value.split(/\s+/g).length < parseInt(test[i].match)) {
+            this.__activeMessage = test[i].message;
+            return test[i].status;
+          }
+          // see if we match on a piece of the rest of it
+          else if (value.toLowerCase().includes(test[i].match)) {
+            this.__activeMessage = test[i].message;
+            return test[i].status;
+          }
+        }
+        // if we beat all the test then display some nominal woo msg
+        this.__activeMessage = this.inputSuccess.message;
+        return this.inputSuccess.status;
       },
+      /**
+       * Compute icon from status
+       */
+      _iconFromStatus: function(status) {
+        switch (status) {
+          case 'error':
+            return 'icons:error';
+          break;
+          case 'warning':
+          case 'notice':
+            return 'icons:warning';
+          break;
+          case 'info':
+            return 'icons:info-outline';
+          break;
+          default:
+            return 'icons:info';
+          break;
+        }
+      }
     });
   </script>
 </dom-module>
